--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "chromatic": "npx chromatic --project-token=chpt_29a9131b88f11a7"
   },
   "dependencies": {
+    "@draft-js-plugins/image": "^4.1.4",
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "draft-js": "^0.11.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
@@ -36,6 +38,7 @@
     "@storybook/nextjs": "^8.1.1",
     "@storybook/react": "^8.1.1",
     "@storybook/test": "^8.1.1",
+    "@types/draft-js": "^0.11.18",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
