--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "dayjs": "^1.11.11",
     "draft-js": "^0.11.7",
     "next": "14.2.3",
-    "next-auth": "^4.24.7",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
+    "recoil": "^0.7.7",
     "swiper": "^11.1.4",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
