--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "@draft-js-plugins/image": "^4.1.4",
-    "@reduxjs/toolkit": "^2.2.4",
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
@@ -23,8 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
-    "react-redux": "^9.1.2",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "swiper": "^11.1.4",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
