feat: 일기장 생성 및 메인 페이지 API 연동 진행중

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,13 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
+    "target": "ES2022",
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",
     "plugins": [
       {
         "name": "next"
