--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "draft-js": "^0.11.7",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-pwa": "^5.6.0",
     "react": "^18",
@@ -40,6 +41,7 @@
     "@storybook/test": "^8.1.1",
     "@tanstack/react-query-devtools": "^5.49.2",
     "@types/draft-js": "^0.11.18",
+    "@types/js-cookie": "^3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
